--- a/src/main/webapp/WEB-INF/views/registrationSuccess.html
+++ b/src/main/webapp/WEB-INF/views/registrationSuccess.html
@@ -10,7 +10,7 @@
 <title>Registration Success</title>
 </head>
 <body>
-   <div class='container'>
+   <div class="container">
       <h2>Registration Succeeded!</h2>
       <label>User Name: <span th:text="${username}" /></label><br />
       <label>Email: <span th:text="${email}" /></label>
