--- a/src/main/webapp/WEB-INF/views/403.html
+++ b/src/main/webapp/WEB-INF/views/403.html
@@ -9,6 +9,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 </head>
 <body>
+   <div th:replace="navbar"></div>
    <h1>HTTP Status 403 - Access is denied</h1>
    <h2 th:if="${username} != null">User Name: <span th:text="${username}" /><br /></h2>
    <h2>You do not have permission to access this page!
