--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -10,6 +10,7 @@
 <title>Login Page</title>
 </head>
 <body onload="document.loginForm.username.focus();">
+   <div th:replace="navbar"></div>
    <div class="container">
 	   <h1>Spring Security Login Form (Database Authentication)</h1>
 	   <div id="login-box">
