--- a/src/main/webapp/WEB-INF/views/registration.html
+++ b/src/main/webapp/WEB-INF/views/registration.html
@@ -10,6 +10,7 @@
 <title>User Registration Page</title>
 </head>
 <body>
+   <div th:replace="navbar"></div>
    <div class="container">
       <h1>Register here</h1>
       <form action="#" th:action="@{/register}" th:object="${user}" method="POST">
