--- a/src/main/webapp/WEB-INF/views/registrationFailure.html
+++ b/src/main/webapp/WEB-INF/views/registrationFailure.html
@@ -10,6 +10,7 @@
 <title>Registration Failure</title>
 </head>
 <body>
+   <div th:replace="navbar"></div>
    <div class="container">
       <h2>Registration Failed</h2>
       <label>Failed for the following reason: <span th:text="${failureReason}" /></label>
