--- a/src/main/webapp/WEB-INF/views/registrationSuccess.html
+++ b/src/main/webapp/WEB-INF/views/registrationSuccess.html
@@ -10,6 +10,7 @@
 <title>Registration Success</title>
 </head>
 <body>
+   <div th:replace="navbar"></div>
    <div class="container">
       <h2>Registration Succeeded!</h2>
       <label>User Name: <span th:text="${username}" /></label><br />
