--- a/src/main/webapp/WEB-INF/views/registration.html
+++ b/src/main/webapp/WEB-INF/views/registration.html
@@ -7,34 +7,41 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css" />
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script th:src="@{/js/formValidator.js}"></script>
 <title>User Registration Page</title>
 </head>
-<body>
+<body onload="initializeForm()">
    <div th:replace="navbar"></div>
    <div class="container">
       <h1>Register here</h1>
       <form action="#" th:action="@{/register}" th:object="${user}" method="POST">
          <div class="form-group">
 	            <label>User Name:</label>
-	            <input type="text" name="username" class="form-control" placeholder="Enter username" />
+	            <input type="text" id="username" name="username" class="form-control" placeholder="Enter User Name" onblur="validateForm()" onfocus="disableUsernamePrestine()" />
+	            <div style="padding-top: 25px; padding-bottom: 15px;" id="usernameErrorDiv"><span class="alert alert-danger" id="usernameError" /></div>
 	      </div>
 	      <div class="form-group">
                <label>Email:</label>
-               <input type="text" name="email" class="form-control" placeholder="Enter email" />
+               <input type="text" id="email" name="email" class="form-control" placeholder="Enter email" onblur="validateForm()" onfocus="disableEmailPrestine()" />
+               <div style="padding-top: 25px; padding-bottom: 15px;" id="emailErrorDiv"><span class="alert alert-danger" id="emailError" /></div>
          </div>
          <div class="form-group">
                <label>Confirm email:</label>
-               <input type="text" name="emailConfirm" class="form-control" placeholder="Enter email again" />
+               <input type="text" id="emailConfirm" name="emailConfirm" class="form-control" placeholder="Enter email again" onblur="validateForm()" onfocus="disableEmailConfirmPrestine()" />
+               <div style="padding-top: 25px; padding-bottom: 15px;" id="emailConfirmErrorDiv"><span class="alert alert-danger" id="emailConfirmError" /></div>
          </div>
          <div class="form-group">
                <label>Password:</label>
-               <input type="password" name="password" class="form-control" placeholder="Enter password" />
+               <input type="password" id="password" name="password" class="form-control" placeholder="Enter password" onblur="validateForm()" onfocus="disablePasswordPrestine()" />
+               <div style="padding-top: 25px; padding-bottom: 15px;" id="passwordErrorDiv"><span class="alert alert-danger" id="passwordError" /></div>
          </div>
          <div class="form-group">
                <label>Confirm password:</label>
-               <input type="password" name="passwordConfirm" class="form-control" placeholder="Enter password again" />
+               <input type="password" id="passwordConfirm" name="passwordConfirm" class="form-control" placeholder="Enter password again" onblur="validateForm()" onfocus="disablePasswordConfirmPrestine()" />
+               <div style="padding-top: 25px; padding-bottom: 15px;" id="passwordConfirmErrorDiv"><span class="alert alert-danger" id="passwordConfirmError" /></div>
          </div>
-         <button type="submit" class="btn btn-default">Register</button>
+         <button type="submit" id="submitButton" class="btn btn-default">Register</button>
          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
       </form>
    </div>
