--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -2,11 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
 <!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" />
 <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <title>Login Page</title>
 </head>
 <body onload="document.loginForm.username.focus();">
@@ -15,8 +15,8 @@
 	   <h1>Spring Security Login Form (Database Authentication)</h1>
 	   <div id="login-box">
 	      <h3>Login with User Name and Password</h3>
-	      <div th:if="${error}" style="padding-top: 15px; padding-bottom: 25px;"><span class="alert alert-danger"><span th:text="${error}" /></span></div>
-	      <div th:if="${msg}" style="padding-top: 15px; padding-bottom: 25px;"><span class="alert alert-info"><span th:text="${msg}" /></span></div>
+	      <div th:if="${error}" style="padding-top: 15px;"><div class="alert alert-danger"><span th:text="${error}" /></div></div>
+	      <div th:if="${msg}" style="padding-top: 15px;"><div class="alert alert-info"><span th:text="${msg}" /></div></div>
 	      <form name="loginForm" th:action="@{/login}" method="POST">
             <div class="form-group">
                <label>User Name:</label>
