--- a/src/main/webapp/WEB-INF/views/registration.html
+++ b/src/main/webapp/WEB-INF/views/registration.html
@@ -15,7 +15,7 @@
    <div th:replace="navbar"></div>
    <div class="container">
       <h1>Register here</h1>
-      <form action="#" th:action="@{/register}" th:object="${user}" method="POST">
+      <form action="#" th:action="@{/register}" th:object="${user}" onsubmit="return validateForm()" method="POST">
          <div class="form-group">
 	            <label>User Name:</label>
 	            <input type="text" id="username" name="username" class="form-control" placeholder="Enter User Name" onblur="validateForm()" onfocus="disableUsernamePrestine()" />
