--- a/src/main/webapp/WEB-INF/views/games.html
+++ b/src/main/webapp/WEB-INF/views/games.html
@@ -16,12 +16,12 @@
    <div class="container">
       <h3>Your Games:</h3>
       <div class="list-group">
-         <a href="#" th:each="game : ${userGames}" class="list-group-item"><span th:text="${game}" /></a>
+         <a href="game.html" th:each="game : ${userGames}" th:href="@{/game(gid=${game.gid})}" class="list-group-item"><span th:text="${game.title}" /></a>
       </div>
 
       <h3>Public Games:</h3>
       <div class="list-group">
-         <a href="#" th:each="game : ${publicGames}" class="list-group-item"><span th:text="${game}" /></a>
+         <a href="game.html" th:each="game : ${publicGames}" th:href="@{/game(gid=${game.gid})}" class="list-group-item"><span th:text="${game.title}" /></a>
       </div>
    </div>
 </body>
