--- a/src/main/webapp/WEB-INF/views/newGameFailure.html
+++ b/src/main/webapp/WEB-INF/views/newGameFailure.html
@@ -5,12 +5,12 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" />
-<title>Registration Failure</title>
+<title>New Game Failure</title>
 </head>
 <body>
    <div th:replace="navbar"></div>
    <div class="container">
-      <h2>Registration Failed</h2>
+      <h2>New Game Failed</h2>
       <label>Failed for the following reason: <span th:text="${failureReason}" /></label>
    </div>
 </body>
