--- a/src/main/webapp/WEB-INF/views/newGameSuccess.html
+++ b/src/main/webapp/WEB-INF/views/newGameSuccess.html
@@ -5,13 +5,15 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" />
-<title>Registration Failure</title>
+<title>New Game Success</title>
 </head>
 <body>
    <div th:replace="navbar"></div>
    <div class="container">
-      <h2>Registration Failed</h2>
-      <label>Failed for the following reason: <span th:text="${failureReason}" /></label>
+      <h2>New Game Succeeded!</h2>
+      <label>Title: <span th:text="${game.title}" /></label><br />
+      <label>Starting Money: $<span th:text="${game.startingMoney}" /></label><br />
+      <label>Private Game?: <span th:text="${game.privateGame}" /></label>
    </div>
 </body>
 </html>
