--- a/src/main/webapp/WEB-INF/views/registration.html
+++ b/src/main/webapp/WEB-INF/views/registration.html
@@ -8,7 +8,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script th:src="@{/js/formValidator.js}"></script>
+<script th:src="@{/js/userValidator.js}"></script>
 <title>User Registration Page</title>
 </head>
 <body onload="initializeForm()">
