Adding code to actually add a new game (issue #25), adding validators, fixing registration validator

--- a/src/main/webapp/WEB-INF/views/newGame.html
+++ b/src/main/webapp/WEB-INF/views/newGame.html
@@ -5,6 +5,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" />
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script th:src="@{/js/gameValidator.js}"></script>
 <title>New Game Page</title>
 </head>
@@ -12,7 +15,7 @@
    <div th:replace="navbar"></div>
    <div class="container">
       <h1>New Game</h1>
-      <form action="#" th:action="@{newGame}" th:object="${game}" onsubmit="return validateForm()" method="POST">
+      <form action="#" th:if="${game}" th:action="@{newGame}" th:object="${game}" onsubmit="return validateForm()" method="POST">
          <div class="form-group">
             <label>Game Title:</label>
             <input type="text" id="title" name="title" class="form-control" placeholder="Enter Game Title" onblur="validateForm()" onfocus="disableTitlePrestine()" />
@@ -31,6 +34,7 @@
          <button type="submit" id="submitButton" class="btn btn-default">Submit</button>
          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
       </form>
+      <div th:unless="${game}" class="alert alert-danger">You must log in to create a new game.</div>
    </div>
 </body>
 </html>
