--- a/src/main/webapp/WEB-INF/views/game.html
+++ b/src/main/webapp/WEB-INF/views/game.html
@@ -16,6 +16,7 @@
       <h1>Game Title: <span th:text="${game.title}" /></h1>
       <h1>Starting Money: <span th:text="${game.startingMoney}" /></h1>
       <h1>Private Game?: <span th:text="${game.privateGame}" /></h1>
+      <a th:if="${player == null and game.privateGame == false}" class="btn btn-default" href="joinGame.html" th:href="@{/joinGame(gid=${game.gid})}">Join Game</a>
    </div>
    <div th:unless="${game}" class="container"><div class="alert alert-danger">This game is not valid or is a private game that you are not in.</div></div>
 </body>
