Adding yahoo footer, fixing dollars output on view stock page, updating gitignore (issue #28)

--- a/src/main/webapp/WEB-INF/views/viewStock.html
+++ b/src/main/webapp/WEB-INF/views/viewStock.html
@@ -18,5 +18,6 @@
    <div class="container" th:unless="${tickerSymbol}">
       <h2>Stock not found</h2>
    </div>
+   <div th:replace="footer"></div>
 </body>
 </html>
