--- a/src/main/webapp/WEB-INF/views/buyStock.html
+++ b/src/main/webapp/WEB-INF/views/buyStock.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
 <!-- Optional theme -->
@@ -30,18 +31,9 @@
          </div>
          <div class="form-group">
             <label>Game:</label>
-            <div class="dropdown">
-               <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-                  Dropdown
-                  <span class="caret"></span>
-               </button>
-               <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-                  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
-                  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
-                  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
-                  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
-               </ul>
-            </div>
+            <select class="form-control" th:if="${gameTitles}" placeholder="Select a game">
+               <option value="Game1">Game 1</option>
+            </select>
             <div th:unless="${gameTitles}" class="alert alert-danger">
                You are not part of any games
             </div>
