Adding bootstrap-material-design and some fixes that needed to go with it (issue #36)

--- a/src/main/webapp/WEB-INF/views/footer.html
+++ b/src/main/webapp/WEB-INF/views/footer.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-fixed-bottom">
+<div class="navbar-fixed-bottom">
    <div class="pull-right" style="padding-right: 15px">
       <a href="https://www.yahoo.com/?ilc=401" target="_blank"> <img src="https://poweredby.yahoo.com/purple.png" width="134" height="29"/> </a>
    </div>
