--- a/src/StockSim/Views/Home/Index.cshtml
+++ b/src/StockSim/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@using StockSim.Models
 
-@model User
 @{
    Layout = "/Views/Shared/_Layout.cshtml";
    ViewBag.Title = "Home Page";
@@ -13,5 +12,5 @@
    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div>
 <div class="row">
-   <h3 title="@Model.Name" class="@helloClass">Hello @Model.Name!</h3>
+   <h3 title="Test title" class="@helloClass">Hello Tester!</h3>
 </div>
