--- a/src/StockSim/Views/Shared/_Layout.cshtml
+++ b/src/StockSim/Views/Shared/_Layout.cshtml
@@ -4,7 +4,14 @@
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>@ViewBag.Title - Open Stock Sim</title>
-   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" />
+
+   <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.0.0/css/bootstrap.min.css"
+         asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+         asp-fallback-test-class="hidden" asp-fallback-test-property="visibility" asp-fallback-test-value="hidden" />
+   <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap-touch-carousel/0.8.0/css/bootstrap-touch-carousel.css"
+         asp-fallback-href="~/lib/bootstrap-touch-carousel/css/bootstrap-touch-carousel.css"
+         asp-fallback-test-class="carousel-caption" asp-fallback-test-property="display" asp-fallback-test-value="none" />
+   <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
    <div class="navbar navbar-inverse navbar-fixed-top">
@@ -20,6 +27,7 @@
             <ul class="nav navbar-nav">
                <li><a href="/">Home</a></li>
             </ul>
+            @await Html.PartialAsync("_LoginPartial")
          </div>
       </div>
    </div>
@@ -36,5 +44,25 @@
          <p>&copy; @DateTime.Now.Year - Open Stock Sim</p>
       </footer>
    </div>
+
+   <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.1.4.min.js"
+           asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+           asp-fallback-test="window.jQuery">
+   </script>
+   <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.0.0/bootstrap.min.js"
+           asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+           asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
+   </script>
+   <script src="https://ajax.aspnetcdn.com/ajax/hammer.js/2.0.4/hammer.min.js"
+           asp-fallback-src="~/lib/hammer.js/hammer.js"
+           asp-fallback-test="window.Hammer">
+   </script>
+   <script src="https://ajax.aspnetcdn.com/ajax/bootstrap-touch-carousel/0.8.0/js/bootstrap-touch-carousel.js"
+           asp-fallback-src="~/lib/bootstrap-touch-carousel/dist/js/bootstrap-touch-carousel.js"
+           asp-fallback-test="window.Hammer && window.Hammer.Instance">
+   </script>
+   <script src="~/js/site.js" asp-append-version="true"></script>
+
+   @RenderSection("scripts", false)
 </body>
 </html>
