--- a/src/StockSim/Views/Account/Login.cshtml
+++ b/src/StockSim/Views/Account/Login.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System.Collections.Generic
 @using Microsoft.AspNet.Http
 @using Microsoft.AspNet.Http.Authentication
+@using StockSim.Data.Transfer
 @model LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 
