--- a/src/StockSim/Views/Home/Index.cshtml
+++ b/src/StockSim/Views/Home/Index.cshtml
@@ -6,10 +6,10 @@
 }
 
 <div class="jumbotron">
-   <h1>ASP.NET</h1>
-   <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-   <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+   <h1>Welcome to Open Stock Sim!</h1>
+   <p class="lead">Open Stock Sim is an open source stock simulator that is current under construction.</p>
 </div>
 <div class="row">
    <h3 title="Test title" class="@helloClass">Hello Tester!</h3>
+   <p>You can see the code <a href="https://github.com/jonesdy/StockSim/">here</a></p>
 </div>
