Lots of refactoring, adding ability to view games and view specific games

--- a/src/StockSim/Views/Account/ResetPassword.cshtml
+++ b/src/StockSim/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model ResetPasswordViewModel
+﻿@using StockSim.Models.Account
+@model ResetPasswordViewModel
 @{
     ViewData["Title"] = "Reset password";
 }
