--- a/src/StockSim/Views/Manage/ManageLogins.cshtml
+++ b/src/StockSim/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,5 @@
-﻿@model ManageLoginsViewModel
+﻿@using StockSim.Models.Manage
+@model ManageLoginsViewModel
 @using Microsoft.AspNet.Http.Authentication
 @{
     ViewData["Title"] = "Manage your external logins";
