--- a/src/StockSim/Views/Manage/SetPassword.cshtml
+++ b/src/StockSim/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model SetPasswordViewModel
+﻿@using StockSim.Models.Manage
+@model SetPasswordViewModel
 @{
     ViewData["Title"] = "Set Password";
 }
