--- a/src/StockSim/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/src/StockSim/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,5 @@
-﻿@model VerifyPhoneNumberViewModel
+﻿@using StockSim.Models.Manage
+@model VerifyPhoneNumberViewModel
 @{
     ViewData["Title"] = "Verify Phone Number";
 }
