--- a/src/StockSim/Views/Shared/_Layout.cshtml
+++ b/src/StockSim/Views/Shared/_Layout.cshtml
@@ -21,8 +21,9 @@
             </div>
             <div class="navbar-collapse collapse">
                <ul class="nav navbar-nav">
-                  <li><a href="/">Home</a></li>
-                  <li><a href="/StockQuote/GetQuote">Get Quote</a></li>
+                  <li><a href="@Url.Action("Index", "Home")">Home</a></li>
+                  <li><a href="@Url.Action("GetQuote", "StockQuote")">Get Quote</a></li>
+                  <li><a href="@Url.Action("ViewGames", "Game")">View Games</a></li>
                </ul>
                @await Html.PartialAsync("_LoginPartial")
             </div>
