--- a/src/StockSim/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/src/StockSim/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExternalLoginConfirmationViewModel
+﻿@using StockSim.Models.Account
+@model ExternalLoginConfirmationViewModel
 @{
     ViewData["Title"] = "Register";
 }
