--- a/src/StockSim/Views/Account/ForgotPassword.cshtml
+++ b/src/StockSim/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model ForgotPasswordViewModel
+﻿@using StockSim.Models.Account
+@model ForgotPasswordViewModel
 @{
     ViewData["Title"] = "Forgot your password?";
 }
