--- a/src/StockSim/Views/Account/Login.cshtml
+++ b/src/StockSim/Views/Account/Login.cshtml
@@ -2,6 +2,7 @@
 @using Microsoft.AspNet.Http
 @using Microsoft.AspNet.Http.Authentication
 @using StockSim.Data.Transfer
+@using StockSim.Models.Account
 @model LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 
