--- a/src/StockSim/Views/Account/SendCode.cshtml
+++ b/src/StockSim/Views/Account/SendCode.cshtml
@@ -1,4 +1,5 @@
-﻿@model SendCodeViewModel
+﻿@using StockSim.Models.Account
+@model SendCodeViewModel
 @{
     ViewData["Title"] = "Send Verification Code";
 }
