--- a/src/StockSim/Views/Manage/AddPhoneNumber.cshtml
+++ b/src/StockSim/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,5 @@
-﻿@model AddPhoneNumberViewModel
+﻿@using StockSim.Models.Manage
+@model AddPhoneNumberViewModel
 @{
     ViewData["Title"] = "Add Phone Number";
 }
