--- a/src/StockSim/Views/Manage/ChangePassword.cshtml
+++ b/src/StockSim/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model ChangePasswordViewModel
+﻿@using StockSim.Models.Manage
+@model ChangePasswordViewModel
 @{
     ViewData["Title"] = "Change Password";
 }
