Adding ability to make new games, need to add the current user to it and other stuff

--- a/src/StockSim/Views/Game/ViewGames.cshtml
+++ b/src/StockSim/Views/Game/ViewGames.cshtml
@@ -32,3 +32,13 @@
       </a>
    }
 </div>
+
+<br/>
+<br/>
+
+@if (User.Identity.IsAuthenticated)
+{
+   <form action="@Url.Action("NewGame")">
+      <button type="submit" class="btn btn-default">Create New Game</button>
+   </form>
+}
