--- a/src/StockSim/Views/Game/ViewGame.cshtml
+++ b/src/StockSim/Views/Game/ViewGame.cshtml
@@ -15,3 +15,7 @@
 {
    <a href="@Url.Action("JoinGame")?gid=@Model.Gid" class="btn btn-default" role="button">Join Game</a>
 }
+else
+{
+   <a href="@Url.Action("LeaveGame")?gid=@Model.Gid" class="btn btn-danger" role="button">Leave Game</a>
+}
