--- a/src/StockSim/Views/Game/ViewGames.cshtml
+++ b/src/StockSim/Views/Game/ViewGames.cshtml
@@ -10,6 +10,10 @@
 
 <h3>Public Games</h3>
 <div class="list-group">
+   @if (!Model.PublicGames.Any())
+   {
+      <span class="list-group-item">No games available!</span>
+   }
    @foreach (var publicGame in Model.PublicGames)
    {
       <a href="@Url.Action("ViewGame")?gid=@publicGame.Gid" class="list-group-item">
@@ -24,6 +28,10 @@
 
 <h3>Your Games</h3>
 <div class="list-group">
+   @if (!Model.UserGames.Any())
+   {
+      <span class="list-group-item">No games available!</span>
+   }
    @foreach (var userGame in Model.UserGames)
    {
       <a href="@Url.Action("ViewGame")?gid=@userGame.Gid" class="list-group-item">
