--- a/src/StockSim/Views/Stock/BuyStock.cshtml
+++ b/src/StockSim/Views/Stock/BuyStock.cshtml
@@ -2,10 +2,12 @@
 @model BuySellStockViewModel
 
 @{ 
-   ViewData["Title"] = "Buy Stock";
+   ViewData["Title"] = "Buy Stock - " + Model.GameTitle;
 }
 
 <h2>@ViewData["Title"]</h2>
+
+<h3>Current Balance: @Model.Balance.ToString("C")</h3>
 
 <form asp-controller="Stock" asp-action="BuyStock" method="post" class="form-horizontal" role="form">
    <div class="form-group">
@@ -32,6 +34,7 @@
 
 <p>
    <button class="btn btn-default" id="getQuoteBtn">Get Quote</button>
+   <a href="@Url.Action("ViewGame", "Game")?gid=@Model.Gid" class="btn btn-default">Return to game</a>
 </p>
 <div id="quoteDiv" style="display: none">
    <p>
@@ -44,6 +47,20 @@
 <div id="errorDiv" style="display: none">
    <span id="errorText"></span>
 </div>
+
+<p>
+   <h3>Your Stocks:</h3>
+   <div class="list-group">
+      @if (!Model.PlayerStocks.Any())
+      {
+         <span class="list-group-item">You don't own any stocks!</span>
+      }
+      @foreach (var stock in Model.PlayerStocks)
+      {
+         <span class="list-group-item">@stock.TickerSymbol<span class="badge">@stock.Count</span></span>
+      }
+   </div>
+</p>
 
 @section Scripts {
    <script src="~/js/Stock/BuyStock.js"></script>
