Can't buy/sell when the market is closed, disabling private games, can't sell when you have no stocks

--- a/src/StockSim/Views/Game/NewGame.cshtml
+++ b/src/StockSim/Views/Game/NewGame.cshtml
@@ -25,8 +25,9 @@
    <div class="form-group">
       <div class="col-md-offset-2 col-md-10">
          <div class="checkbox">
-            <input asp-for="Private"/>
+            <input asp-for="Private" disabled/>
             <label asp-for="Private"></label>
+            <label>Private games coming soon!</label>
          </div>
       </div>
    </div>
