--- a/src/StockSim/Views/Transaction/ViewTransactions.cshtml
+++ b/src/StockSim/Views/Transaction/ViewTransactions.cshtml
@@ -12,11 +12,11 @@
    {
       @if (transaction.Buy)
       {
-         <span class="list-group-item list-group-item-danger"><b>@transaction.TickerSymbol</b> - @transaction.Timestamp.ToString("G") <span class="pull-right"><b>@transaction.Count</b> - $@transaction.Price each <b>-@((transaction.Count * transaction.Price).ToString("C"))</b></span></span>
+         <span class="list-group-item list-group-item-danger"><b>@transaction.TickerSymbol</b> - @transaction.Timestamp.ToString("G") <span class="pull-right"><b>@transaction.Count</b> - @transaction.Price.ToString("C") each <b>-@((transaction.Count * transaction.Price).ToString("C"))</b></span></span>
       }
       else
       {
-         <span class="list-group-item list-group-item-success"><b>@transaction.TickerSymbol</b> - @transaction.Timestamp.ToString("G") <span class="pull-right"><b>@transaction.Count</b> - $@transaction.Price each <b>+@((transaction.Count * transaction.Price).ToString("C"))</b></span></span>
+         <span class="list-group-item list-group-item-success"><b>@transaction.TickerSymbol</b> - @transaction.Timestamp.ToString("G") <span class="pull-right"><b>@transaction.Count</b> - @transaction.Price.ToString("C") each <b>+@((transaction.Count * transaction.Price).ToString("C"))</b></span></span>
       }
    }
    <span class="list-group-item">Current Balance <span class="pull-right"><b>@Model.Balance.ToString("C")</b></span></span>
