--- a/src/StockSim/Views/Home/Index.cshtml
+++ b/src/StockSim/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="jumbotron">
    <h1>Welcome to Open Stock Sim!</h1>
-   <p class="lead">Open Stock Sim is an open source stock simulator that is current under construction.</p>
+   <p class="lead">Open Stock Sim is an open source stock simulator that is currently under construction.</p>
 </div>
 <div class="row">
    <h3>The Stock Market is currently @if (Model == null)
