--- a/src/StockSim/Views/Account/ForgotPassword.cshtml
+++ b/src/StockSim/Views/Account/ForgotPassword.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h2>@ViewData["Title"].</h2>
+<h2>@ViewData["Title"]</h2>
 
 <form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal" role="form">
-    <h4>Enter your email.</h4>
+    <h4>Enter your email. Note you must have confirmed your email before you can change your password (check your spam folder!)</h4>
     <hr />
     <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
     <div class="form-group">
